[FV] fix: expenses can be viewed/edit/deleted by all flat members
new user does not have access to any expenses because they are not part of debit users